--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,56 @@ table, th, td {
     margin: 15px;
     padding: 3px;
 }
+
+#banner{
+    height: 200px;
+    margin: 20px auto;
+    width: 65%;
+    background-image: url("../media/banner.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.cell {
+    padding: 20px 0;
+    /*border: 1px solid lightgrey;*/
+    background-color: white;
+    position: relative;
+    overflow: hidden;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: auto;
+  height: 150px;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  margin: 0 auto;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.cell:hover .image {
+  opacity: 0.3;
+}
+
+.cell:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: lightblue;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
