--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,6 @@ table, th, td {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%)
 }
 
 .cell:hover .image {
@@ -90,4 +89,8 @@ table, th, td {
   color: white;
   font-size: 16px;
   padding: 16px 32px;
+}
+
+h2 {
+    margin: 120px 0 20px 0;
 }
