--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ h1 {
     margin: 0 25px 25px 0;
 }
 
+figure > img {
+    max-width: 250px;
+}
+
 figcaption {
     text-align: center;
 }
@@ -112,4 +116,8 @@ form {
 address {
     margin-top: 20px;
     text-align: right;
+}
+
+aside {
+    font-style: italic;
 }
