--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .nav {
-  background-color: #BDBDBF;
+   background-color: #BDBDBF;
 }
 
 #betumeretvalto {
@@ -63,48 +63,43 @@ table, th, td {
 
 .cell {
     padding: 20px 0;
-    /*border: 1px solid lightgrey;*/
     background-color: white;
     position: relative;
     overflow: hidden;
 }
 
 .image {
-  opacity: 1;
-  display: block;
-  width: auto;
-  height: 150px;
-  transition: .5s ease;
-  backface-visibility: hidden;
-  margin: 0 auto;
+    opacity: 1;
+    display: block;
+    width: auto;
+    height: 150px;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    margin: 0 auto;
 }
 
 .middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .cell:hover .image {
-  opacity: 0.3;
+    opacity: 0.3;
 }
 
 .cell:hover .middle {
-  opacity: 1;
+    opacity: 1;
 }
 
 .text {
-  background-color: lightblue;
-  color: white;
-  font-size: 16px;
-  padding: 16px 32px;
-}
-
-h2 {
-    margin: 120px 0 20px 0;
+    background-color: lightblue;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
 }
 
 form { 
@@ -120,4 +115,5 @@ address {
 
 aside {
     font-style: italic;
+    margin-bottom: 120px;
 }
